2011-02-23  Tolleiv Nietsch  <typo3@tolleiv.de>

	* Fixed bug #17511: tx_install_session::write doesn't fix permissions

2011-02-23  Francois Suter  <francois.suter@typo3.org>

	* Fixed bug #16636: Suggest wizard does not work with drop-down select fields

2011-02-22  Jigal van Hemert  <jigal@xs4all.nl>

	* Fixed bug #16656: ImageMagick does not work with quotes in exec() path on Windows

2011-02-22  Stefan Galinski  <stefan.galinski@gmail.com>

	* Fixed bug #17483: GifBuilder - meaningfulTempFilePrefix can cause invalid image urls
	* Fixed bug #17531: htmlMail - Can't send mails on port based systems with Swiftmailer substitution
	* Fixed bug #17452: options.hideRecords.pages is ignored in page tree (Thanks to Andreas Kiessling)
	* Fixed bug #17457: Pagetree - User Mount Points are always expanded
	* Fixed bug #17479: javascript error after contextmenu -> delete a page

2011-02-22  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #17670: Remove deprecated functions scheduled for removal in 4.6
	* Fixed bug #17662: Remove deprecated class gzip_encode
	* Fixed bug #17661: Remove deprecated methods from t3lib_div

2011-02-22  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #17695: htmlArea RTE: Removing format may remove content

2011-02-22  Tobias Liebig  <mail_typo3@etobi.de>

	* Fixed bug #17653: t3editor: wrong size calculation in Chrome for the code completion window (Thanks to Stephan Petzl)
	* Fixed bug #17654: t3editor: some code completion descriptions have &quot; entities instead of real quotes (thanks to Christian Kartnig)

2011-02-22  Jigal van Hemert  <jigal@xs4all.nl>

	* Fixed bug #17518: Content type "mailform" no longer accepts list of addresses for "Recipient List" (also fixed function description in t3lib_mail_SwiftMailerAdapter)

2011-02-22  Steffen Ritter  <info@steffen-ritter.net>

	* Fixed bug #16891: showpic.php causes a fatal error if parameters GET variable is not an array (Thanks to Helmut Hummel)